Added form/output clearing to functions

--- a/app.html
+++ b/app.html
@@ -55,10 +55,10 @@
                                     <button type="button" id="checkBtn" class="btn btn-success btn-wide">Find that
                                         Fruit!</button>
                                 </div>
-                                <div class="col">
+                                <!-- <div class="col">
                                     <button type="button" id="allBtn" class="btn btn-info btn-wide">All the
                                         Fruit!</button>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
